--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -72,6 +72,7 @@ span:hover {
     position: absolute;
     box-shadow: 0 0 16px rgba(0,0,0,.1);
     border-radius: 8px;
+    z-index: 9;
 }
 .downcontent a
 {
@@ -121,6 +122,11 @@ span:hover {
 .introdution .content-main {
     position: relative;
     padding: 30px 0 ;
+}
+.content-main {
+    justify-content: space-between;
+    
+    
 }
 .content {
     width: 100%;
