--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -3,6 +3,7 @@
     --black-color: #000;
     --text-color: #333;
 }
+
 * {
     box-sizing: inherit;
 }
@@ -11,13 +12,14 @@ html {
 
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
-    line-height: 24px;
+    /* line-height: 24px; */
     display: block;
 
 
 
 
 }
+
 ul {
     list-style: none;
 }
@@ -27,11 +29,13 @@ ul {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    
+
 }
+
 main {
     display: block;
 }
+
 body {
     padding-top: 79px;
     position: relative;
@@ -39,7 +43,5 @@ body {
     background-color: #fff;
     font-size: 16px;
     min-width: 300px;
-    
+
 }
-
-
