--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,4 @@
-#header{
+#header {
     background: #fff;
     border-bottom: 1px solid #525358;
     position: fixed;
@@ -9,27 +9,29 @@
     right: 0;
     z-index: 999;
 }
-.container_space
- {
+
+.container_space {
     padding: 7px 50px;
     display: flex;
     box-sizing: border-box;
     justify-content: space-between;
     max-width: 1380px;
     margin-left: auto;
-    margin-right: auto ; 
+    margin-right: auto;
 
 }
+
 .logo {
     cursor: pointer;
     box-sizing: inherit;
 }
 
 .navi {
-    padding-left: 70px ;
+    padding-left: 70px;
 
 
 }
+
 .navi li:hover a {
     display: inline-block;
 
@@ -38,15 +40,18 @@
 .navi_list {
     justify-content: space-between;
 }
+
 .flexbox {
     display: flex;
     flex-wrap: wrap;
     cursor: pointer;
 }
-.nav_item{
+
+.nav_item {
     list-style: none;
     margin-left: 30px;
 }
+
 .nav_item-ClickDropdown {
     padding-right: 10px;
     list-style: none;
@@ -56,7 +61,8 @@
 
 
 }
-span:hover {
+
+.span:hover {
     color: #248aff;
 
 }
@@ -64,18 +70,20 @@ span:hover {
 .nav_item-ClickDropdown:hover .downcontent {
     display: block;
 }
+
 .downcontent li a:hover {
     background: #f6f6f7;
     color: #248aff;
 }
+
 .downcontent {
     position: absolute;
-    box-shadow: 0 0 16px rgba(0,0,0,.1);
+    box-shadow: 0 0 16px rgba(0, 0, 0, .1);
     border-radius: 8px;
     z-index: 9;
 }
-.downcontent a
-{
+
+.downcontent a {
     text-decoration: none;
     color: #525358;
     padding: 12px 24px;
@@ -87,10 +95,12 @@ span:hover {
 
 
 }
-.block{
+
+.block {
     display: flex;
     height: 100%;
 }
+
 .bluelist {
     background-color: #fff;
     border: 1px solid #248aff;
@@ -104,41 +114,88 @@ span:hover {
     display: flex;
 
 }
+
 @media (max-width: 1400px) {
-    header{
+    header {
         padding: 8px;
-       
+
 
 
     }
 
 }
-@media (min-width: 950px) {
 
-}
+@media (min-width: 950px) {}
+
 .introdution {
     background: #fff;
 }
+
 .container {
     padding: 0 70px;
     margin: 0 67px;
-    
+
 }
+
 .introdution .content-main {
     position: relative;
-    padding: 30px 0 ;
+    padding: 30px 0;
 
 }
+
 .content-main {
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
- 
+    height: 500px;
 }
-.content {
-    width: 54%;
-}
-.images-start {
-    width: 46%;
 
+.content {
+    margin-bottom: 10%;
+    width: 48%;
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.images-start {
+    width: 48%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.start {
+    font-size: 40px;
+}
+
+.sub-start {
+    font-size: 16px;
+    color: gray;
+    line-height: 1.5rem;
+}
+
+#introduction-img {
+    height: 100%;
+    width: 80%;
+}
+
+.signup-btn {
+    text-decoration: none;
+    color: white;
+    font-size: 14px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    background-color: #0068ff;
+    width: 30%;
+    height: 3.5rem;
+    border-radius: 4px;
+}
+
+.signup-btn:hover {
+    background-color: #248aff;
 }
